Card component styles fixed, name is aligned with the vote icon

--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -25,6 +25,7 @@
     .card-title {
       display: flex;
       align-items: flex-end;
+      height: 100px;
 
       div {
         display: inline;
@@ -66,7 +67,7 @@
 
       .voting {
         position: absolute;
-        bottom: 80px;
+        bottom: 55px;
       }
     }
   }
